[metadata]
name = aihive-tools
version = 0.0.1
author = Jacob Weiss
description = A set of tools for autonomous agents to use.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
confluence =
    atlassian-python-api>=3.0.0

jira = 
    jira>=3.5.0

duckduckgo =
    duckduckgo-search>=3.0.0
    requests>=2.28.0

yahoo_finance =
    yfinance>=0.2.0

[options.packages.find]
exclude =
    tests*
    docs*